
    HDFS-4168. Fix a NullPointerException in FSNamesystem.removeBlocks(..).
    (Jing Zhao via szetszwo)

    HADOOP-8963. CopyFromLocal doesn't always create user directory.
    (Arpit Gupta via suresh)

    HDFS-4180. Update TestFileCreation for HDFS-4122.  (Jing Zhao via szetszwo)

    HADOOP-9036. Fix racy test case TestSinkQueue (Backport HADOOP-7292).
    (Luke Lu backport by suresh)

Release 1.1.1 - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HDFS-528. Backport: Add ability for safemode to wait for a minimum number
    of live datanodes.  (szetszwo)

  IMPROVEMENTS

    HDFS-1108 Log newly allocated blocks (hdfs-1108-hadoop-1-v5.patch) (sanjay) 

    HADOOP-8823. ant package target should not depend on cn-docs. (szetszwo)

    HADOOP-8995. Remove unnecessary bogus exception from Configuration.java.
    (Jing Zhao via suresh)

    HDFS-4161. Backport HDFS-1865 "Share LeaseChecker thread among DFSClients"
    and the related JIRAs: HDFS-278, HDFS-1840, HDFS-1870, HDFS-1890, HDFS-2810,
    HDFS-3646 and HDFS-2240. (szetszwo)

    HDFS-1539. A config option for the datanode to fsycn a block file
    when block is completely written. (dhruba via szetszwo)

    HDFS-4174. Add ability to list the corrupted files in WebUI (backport of
    HDFS-1031). (Jing Zhao via suresh)

  BUG FIXES

    HADOOP-8878. Uppercase namenode hostname causes hadoop dfs calls with
    webhdfs filesystem and fsck to fail when security is on.
    (Arpit Gupta via suresh)

    HADOOP-8882. Uppercase namenode host name causes fsck to fail when 
    useKsslAuth is on. (Arpit Gupta via suresh)

    HDFS-3791. HDFS-173 Backport - Namenode will not block until a large 
    directory deletion completes. It allows other operations when the 
    deletion is in progress. (umamahesh via suresh)

    HDFS-2815. Namenode is not coming out of safemode when we perform
    (NN crash + restart). Also FSCK report shows blocks missed. (umamahesh)
